:bulb: Docs: add schema swagger for orders
