# back-pizza-store/src/docs/schemas/index.js
@@ -1,9 +1,12 @@
 const userSchema = require('./user')
 const sessionSchema = require('./sessions')
 const mealsSchema = require('./meals')
+const orderMealSchema = require('./orders')
+
 
 module.exports = {
   User: userSchema,
   Sessions: sessionSchema,
-  Meals: mealsSchema
+  Meals: mealsSchema,
+  Orders: orderMealSchema
 }
