# back-pizza-store/src/docs/schemas/meals.js
@@ -1,9 +1,9 @@
 module.exports = {
     "productImg": File,
     "name": "Test Meal",
-    "ingredients": "Test ingredients", 
+    "category": "[\ 'almoço', \ 'test']", 
+    "ingredients": "[\ 'Test ingredients', \ 'test']", 
     "description": "Write your products description", 
     "price": 12.5, 
-    "category": ["almoço"], 
     "created_by": 1
 }
