# back-pizza-store/src/docs/schemas/orders.js
@@ -1,0 +1,4 @@
+module.exports = {
+    "user_id": 1,
+    "total_price": 19.5
+}
