# back-pizza-store/swagger-output.json
@@ -21,7 +21,7 @@
     "/users/": {
       "post": {
         "tags": [
-          "users"
+          "Users"
         ],
         "description": "Endpoint to create a new user.",
         "parameters": [
@@ -44,6 +44,9 @@
     },
     "/users/validated": {
       "get": {
+        "tags": [
+          "Users"
+        ],
         "description": "",
         "parameters": [
           {
@@ -62,7 +65,7 @@
     "/sessions/": {
       "post": {
         "tags": [
-          "sessions"
+          "Sessions"
         ],
         "description": "Endpoint to create a new session.",
         "parameters": [
@@ -95,6 +98,9 @@
     },
     "/meals/{id}": {
       "get": {
+        "tags": [
+          "Meals"
+        ],
         "description": "",
         "parameters": [
           {
@@ -116,7 +122,13 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Meals"
+        ],
+        "description": "Endpoint to update a meal",
+        "consumes": [
+          "multipart/form-data"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -128,6 +140,61 @@
             "name": "cookie",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "productImg",
+            "in": "formData",
+            "type": "file",
+            "required": true,
+            "description": "Image file for the meal"
+          },
+          {
+            "name": "name",
+            "in": "formData",
+            "type": "string",
+            "required": true,
+            "description": "Name of the meal"
+          },
+          {
+            "name": "ingredients",
+            "in": "formData",
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "Ingredients of the meal"
+          },
+          {
+            "name": "category",
+            "in": "formData",
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "Category of the meal"
+          },
+          {
+            "name": "description",
+            "in": "formData",
+            "type": "string",
+            "required": true,
+            "description": "Description of the meal"
+          },
+          {
+            "name": "price",
+            "in": "formData",
+            "type": "number",
+            "required": true,
+            "description": "Price of the meal"
+          },
+          {
+            "name": "created_by",
+            "in": "formData",
+            "type": "number",
+            "required": true,
+            "description": "ID of the user who created the meal"
           }
         ],
         "responses": {
@@ -137,6 +204,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Meals"
+        ],
         "description": "",
         "parameters": [
           {
@@ -235,12 +305,24 @@
     },
     "/orders/": {
       "post": {
-        "description": "",
+        "tags": [
+          "Orders"
+        ],
+        "description": "Endpoint to create a new order",
         "parameters": [
           {
             "name": "cookie",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "orders",
+            "in": "body",
+            "description": "Orders meals information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Orders"
+            }
           }
         ],
         "responses": {
@@ -250,6 +332,9 @@
         }
       },
       "get": {
+        "tags": [
+          "Orders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -267,6 +352,9 @@
     },
     "/orders/{id}": {
       "get": {
+        "tags": [
+          "Orders"
+        ],
         "description": "",
         "parameters": [
           {
@@ -290,12 +378,33 @@
     },
     "/orders/checkout": {
       "post": {
-        "description": "",
+        "tags": [
+          "Orders"
+        ],
+        "description": "Endpoint to checkout order user",
         "parameters": [
           {
             "name": "cookie",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "checkout",
+            "in": "body",
+            "required": true,
+            "description": "Checkout order",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user_id": {
+                  "type": "number",
+                  "example": 1
+                }
+              },
+              "required": [
+                "user_id"
+              ]
+            }
           }
         ],
         "responses": {
@@ -307,12 +416,21 @@
     },
     "/checkout/": {
       "post": {
-        "description": "",
+        "description": "Endpoint to create a new order",
         "parameters": [
           {
             "name": "cookie",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "orders",
+            "in": "body",
+            "description": "Orders meals information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Orders"
+            }
           }
         ],
         "responses": {
@@ -362,12 +480,30 @@
     },
     "/checkout/checkout": {
       "post": {
-        "description": "",
+        "description": "Endpoint to checkout order user",
         "parameters": [
           {
             "name": "cookie",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "checkout",
+            "in": "body",
+            "required": true,
+            "description": "Checkout order",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user_id": {
+                  "type": "number",
+                  "example": 1
+                }
+              },
+              "required": [
+                "user_id"
+              ]
+            }
           }
         ],
         "responses": {
@@ -379,6 +515,9 @@
     },
     "/order_items/": {
       "post": {
+        "tags": [
+          "Order Items"
+        ],
         "description": "",
         "parameters": [
           {
@@ -394,6 +533,9 @@
         }
       },
       "get": {
+        "tags": [
+          "Order Items"
+        ],
         "description": "",
         "parameters": [
           {
@@ -411,6 +553,9 @@
     },
     "/order_items/{id}": {
       "get": {
+        "tags": [
+          "Order Items"
+        ],
         "description": "",
         "parameters": [
           {
@@ -432,6 +577,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Order Items"
+        ],
         "description": "",
         "parameters": [
           {
@@ -453,6 +601,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Order Items"
+        ],
         "description": "",
         "parameters": [
           {
@@ -476,6 +627,9 @@
     },
     "/cart/": {
       "post": {
+        "tags": [
+          "Cart"
+        ],
         "description": "",
         "parameters": [
           {
@@ -493,6 +647,9 @@
     },
     "/cart/{user_id}": {
       "get": {
+        "tags": [
+          "Cart"
+        ],
         "description": "",
         "parameters": [
           {
@@ -516,6 +673,9 @@
     },
     "/cart/{cart_item_id}": {
       "put": {
+        "tags": [
+          "Cart"
+        ],
         "description": "",
         "parameters": [
           {
@@ -537,6 +697,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Cart"
+        ],
         "description": "",
         "parameters": [
           {
@@ -600,9 +763,13 @@
           "type": "string",
           "example": "Test Meal"
         },
+        "category": {
+          "type": "string",
+          "example": "[ 'almoço',  'test']"
+        },
         "ingredients": {
           "type": "string",
-          "example": "Test ingredients"
+          "example": "[ 'Test ingredients',  'test']"
         },
         "description": {
           "type": "string",
@@ -612,18 +779,22 @@
           "type": "number",
           "example": 12.5
         },
-        "category": {
-          "type": "array",
-          "example": [
-            "almoço"
-          ],
-          "items": {
-            "type": "string"
-          }
-        },
         "created_by": {
           "type": "number",
           "example": 1
+        }
+      }
+    },
+    "Orders": {
+      "type": "object",
+      "properties": {
+        "user_id": {
+          "type": "number",
+          "example": 1
+        },
+        "total_price": {
+          "type": "number",
+          "example": 19.5
         }
       }
     }
